# unsloth-rs

./: .gitignore  .gitleaks.toml  BENCHMARKING.md  BRANCH_STRATEGY.md  BRANCH_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  CUBECL_09_MIGRATION.md  CUBECL_IMPLEMENTATION_GUIDE.md  CUBECL_RESEARCH_REQUIREMENTS.md  Cargo.toml  DEBT.md  FLASH_ATTENTION_PLAN.md  GPU_SETUP.md  GPU_TESTS_IMPLEMENTATION_SUMMARY.md  HANDOFF.md  INTEGRATION_TESTS_SUMMARY.md  ISSUE_STATUS.md  NEXT_PHASE_PLAN.md  PHASE_2_5_IMPLEMENTATION_PLAN.md  PHASE_3_5_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FULL.md  PUBLISHING.md  README.md  ROADMAP.md  SUMMARY.md  TASKS.md  TASKS_2_5_2_6_PLAN.md  TERNARY_GPU_IMPLEMENTATION.md  TESTING_STATUS.md  details.md  math.md  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/skills/unsloth-kernel-optimization/: SKILL.md
.github/workflows/: ci.yml  fleet-ci.yml  jules-automerge.yml  reopen-issues-closed-off-main.yml
archive/ternary_cubecl/: README.md
benches/: kernels.rs
docs/: DEPENDENCIES.md
docs/archive/: FLASH_ATTENTION_IMPLEMENTATION_STATUS.md  HANDOFF_phase1_flash_attention.md  PHASE1_SUMMARY.md
examples/: basic_attention.rs  gpu_test.rs  ternary_quantization.rs
scripts/: gpu-test.sh  local-build.sh  profile-gpu.sh
src/: error.rs  lib.rs  memory.rs  training.rs
src/kernels/: attention.rs  attention_cubecl.rs  fused_rmsnorm_rope.rs  fused_swiglu.rs  mod.rs  rmsnorm.rs  rope.rs  swiglu.rs
src/kernels/cubecl/: config.rs  interop.rs  kernel.rs  mod.rs
src/kernels/ternary/: attention.rs  attention_cubecl.rs  config.rs  linear.rs  matmul.rs  matmul_cubecl.rs  mod.rs  model.rs  quantize.rs  types.rs
tests/: helpers.rs  integration.rs
tests/gpu/: flash_attention.rs  mod.rs
