[package]
name = "unsloth-rs"
version = "1.0.3"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Candle/CubeCL transformer kernel building blocks (not an Unsloth product port)"
repository = "https://github.com/tzervas/unsloth-rs"
keywords = ["transformers", "llm", "machine-learning", "attention", "rust"]
categories = ["science", "mathematics"]
exclude = [
    "archive/**",
    "docs/archive/**",
    "target/**",
    ".github/**",
]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { version = "1.21", features = ["derive"] }

# GPU compute - CubeCL for cross-platform GPU kernels
cubecl = { workspace = true }
cubecl-cuda = { workspace = true, optional = true }
# Tensor-core accelerated matmul for Q@K^T and Attn@V operations
# Note: Fallback to manual implementation initially; integrate once validated
# cubek-matmul = { git = "https://github.com/tracel-ai/cubek" }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.9"
anyhow = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "cubecl/cuda", "cubecl-cuda"]
# Empty placeholder only — does NOT compile archive/ternary_cubecl (UNS-P2-01 non-goal)
_ternary_cubecl_todo = []
# Experimental tiled FA-2; gated off until CubeCL comptime issues resolved
_phase2_tiled_kernel = []

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"

[[bench]]
name = "kernels"
harness = false

[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
thiserror = "2.0"
tracing = "0.1"
cubecl = "0.9"
cubecl-cuda = "0.9"
criterion = "0.8"
anyhow = "1.0"
